[Add] width-check Page 구현

--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
                   container의 width값을 실시간으로 확인하여 min-width,
                   max-width에 대해 공부해볼 수 있는 페이지 입니다.
                 </p>
-                <a class="btn btn-primary btn-lg mt-4" href="#!">Go WebPage!</a>
+                <a
+                  class="btn btn-primary btn-lg mt-4"
+                  href="./training/width-check/width-check.html"
+                  >Go WebPage!</a
+                >
               </div>
             </div>
           </div>
