--- a/training/width-check/width-check.html
+++ b/training/width-check/width-check.html
@@ -5,6 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title></title>
+    <link rel="stylesheet" href="../../css/width-check.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="wrapper">
+      <div class="min-item">
+        min-width
+        <p></p>
+      </div>
+      <div class="max-item">
+        max-width
+        <p></p>
+      </div>
+      <div class="none-item">
+        width
+        <p></p>
+      </div>
+    </div>
+
+    <script src="../../js/width-check.js"></script>
+  </body>
 </html>
