--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                 <a
                   class="btn btn-primary btn-lg mt-4"
                   href="./training/width-check/width-check.html"
-                  >Go WebPage!</a
+                  >이동!</a
                 >
               </div>
             </div>
@@ -90,7 +90,7 @@
                 <div
                   class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"
                 >
-                  <i class="bi bi-cloud-download"></i>
+                  <i class="bi bi-border-width"></i>
                 </div>
                 <h2 class="fs-4 fw-bold">Free to download</h2>
                 <p class="mb-0">
