[Feat] MainPage에 flex-item page추가

--- a/index.html
+++ b/index.html
@@ -92,11 +92,16 @@
                 >
                   <i class="bi bi-border-width"></i>
                 </div>
-                <h2 class="fs-4 fw-bold">Free to download</h2>
+                <h2 class="fs-4 fw-bold">flex-items 연습</h2>
                 <p class="mb-0">
-                  As always, Start Bootstrap has a powerful collectin of free
-                  templates.
+                  flex-item속성인 flex-grow, flex-basis에 대해 확인해볼 수 있는
+                  페이지입니다.
                 </p>
+                <a
+                  class="btn btn-primary btn-lg mt-4"
+                  href="./training/flex-items/flex-items.html"
+                  >이동!</a
+                >
               </div>
             </div>
           </div>
