[Feat] 계산기 기능 추가. 계산기 기본기능 구현 완료. (일부 NaN, "." 여러개 출력 수정 필요.) 수식 상단에 띄우는 작업 필요. 함수화 작업 필요.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     />
     <meta name="description" content="" />
     <meta name="author" content="" />
-    <title>Heroic Features - Start Bootstrap Template</title>
+    <title>HTML/CSS/JS 연습장</title>
     <!-- Favicon-->
     <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
     <!-- Bootstrap icons-->
@@ -113,10 +113,13 @@
                 >
                   <i class="bi bi-card-heading"></i>
                 </div>
-                <h2 class="fs-4 fw-bold">Jumbotron hero header</h2>
-                <p class="mb-0">
-                  The heroic part of this template is the jumbotron hero header!
-                </p>
+                <h2 class="fs-4 fw-bold">계산기</h2>
+                <p class="mb-0">계산기 페이지입니다.</p>
+                <a
+                  class="btn btn-primary btn-lg mt-4"
+                  href="./training/calculator/calculator.html"
+                  >이동!</a
+                >
               </div>
             </div>
           </div>
