--- a/training/flex-items/flex-items.html
+++ b/training/flex-items/flex-items.html
@@ -20,7 +20,7 @@
         <div class="footer-six x">X</div>
       </div>
     </div>
-    <div>
+    <div class="btn-container">
       <div class="btn-group">
         <button class="X-grow-1">X grow-1</button>
         <button class="X-grow-0">X grow-0</button>
