--- a/training/calculator/calculator.html
+++ b/training/calculator/calculator.html
@@ -11,6 +11,7 @@
     <h1>계산기</h1>
     <div class="calculator">
       <div id="calculator-text">
+        <!-- <div class="text-list-area">0</div> -->
         <div class="text-area">0</div>
       </div>
       <div id="calculator-area">
