--- a/training/calculator/calculator.html
+++ b/training/calculator/calculator.html
@@ -11,7 +11,7 @@
     <h1>계산기</h1>
     <div class="calculator">
       <div id="calculator-text">
-        <!-- <div class="text-list-area">0</div> -->
+        <div class="text-list-area">0</div>
         <div class="text-area">0</div>
       </div>
       <div id="calculator-area">
@@ -42,7 +42,7 @@
         <div class="button-area">
           <button class="num" id="zero">0</button>
           <button class="num">.</button>
-          <button class="operator">=</button>
+          <button class="operator" id="equal">=</button>
         </div>
       </div>
     </div>
