[Feat] 계산기 기능 추가, 개선. textListArea에서 계산되도록 로직 수정. 연산자 클릭 시 색상 변경. 연산자 중복처리 다시 해야함.

--- a/training/calculator/calculator.html
+++ b/training/calculator/calculator.html
@@ -11,8 +11,8 @@
     <h1>계산기</h1>
     <div class="calculator">
       <div id="calculator-text">
-        <div class="text-list-area">0</div>
-        <div class="text-area">0</div>
+        <div class="text-list-area"></div>
+        <div class="text-area"></div>
       </div>
       <div id="calculator-area">
         <div class="button-area">
