--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                   <i class="bi bi-card-heading"></i>
                 </div>
                 <h2 class="fs-4 fw-bold">계산기</h2>
-                <p class="mb-0">계산기 페이지입니다.</p>
+                <p class="mb-0">계산기 페이지입니다. 너무 잘 만들었네요.</p>
                 <a
                   class="btn btn-primary btn-lg mt-4"
                   href="./training/calculator/calculator.html"
