[Update] 메인페이지, 트레이닝 페이지 업데이트, 계산기 기능 추가. 메인페이지, 트레이닝 색상 및 아이콘 변경. 계산기 키보드 입력 추가.

--- a/index.html
+++ b/index.html
@@ -47,19 +47,19 @@
       </div>
     </nav>
     <!-- Header-->
-    <header class="py-5">
+    <header class="py-5 bg-black">
       <div class="container px-lg-5">
         <div class="p-4 p-lg-5 bg-light rounded-3 text-center">
           <div class="m-4 m-lg-5">
             <h1 class="display-5 fw-bold">어서오세요!</h1>
-            <p class="fs-4">web-page 연습장입니다.</p>
+            <p class="fs-4">저의 연습장입니다.</p>
             <!-- <a class="btn btn-primary btn-lg" href="#!">Call to action</a> -->
           </div>
         </div>
       </div>
     </header>
     <!-- Page Content-->
-    <section class="pt-4">
+    <section class="pt-4 bg-black">
       <div class="container px-lg-5">
         <!-- Page Features-->
         <div class="row gx-lg-5">
@@ -67,9 +67,9 @@
             <div class="card bg-light border-0 h-100">
               <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                 <div
-                  class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"
+                  class="feature bg-secondary bg-gradient text-white rounded-3 mb-4 mt-n4"
                 >
-                  <i class="bi bi-collection"></i>
+                  <i class="bi bi-grid-1x2-fill"></i>
                 </div>
                 <h2 class="fs-4 fw-bold">width값 실시간 확인.</h2>
                 <p class="mb-0">
@@ -77,7 +77,7 @@
                   max-width에 대해 공부해볼 수 있는 페이지 입니다.
                 </p>
                 <a
-                  class="btn btn-primary btn-lg mt-4"
+                  class="btn btn-dark btn-lg mt-4"
                   href="./training/width-check/width-check.html"
                   >이동!</a
                 >
@@ -88,9 +88,9 @@
             <div class="card bg-light border-0 h-100">
               <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                 <div
-                  class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"
+                  class="feature bg-secondary bg-gradient text-white rounded-3 mb-4 mt-n4"
                 >
-                  <i class="bi bi-border-width"></i>
+                  <i class="bi bi-columns"></i>
                 </div>
                 <h2 class="fs-4 fw-bold">flex-items 연습</h2>
                 <p class="mb-0">
@@ -98,7 +98,7 @@
                   페이지입니다.
                 </p>
                 <a
-                  class="btn btn-primary btn-lg mt-4"
+                  class="btn btn-dark btn-lg mt-4"
                   href="./training/flex-items/flex-items.html"
                   >이동!</a
                 >
@@ -109,14 +109,17 @@
             <div class="card bg-light border-0 h-100">
               <div class="card-body text-center p-4 p-lg-5 pt-0 pt-lg-0">
                 <div
-                  class="feature bg-primary bg-gradient text-white rounded-3 mb-4 mt-n4"
+                  class="feature bg-secondary bg-gradient text-white rounded-3 mb-4 mt-n4"
                 >
-                  <i class="bi bi-card-heading"></i>
+                  <i class="bi bi-calculator"></i>
                 </div>
                 <h2 class="fs-4 fw-bold">계산기</h2>
-                <p class="mb-0">계산기 페이지입니다. 너무 잘 만들었네요.</p>
+                <p class="mb-0">
+                  계산기 페이지입니다. <br />
+                  너무 잘 만들었네요.
+                </p>
                 <a
-                  class="btn btn-primary btn-lg mt-4"
+                  class="btn btn-dark btn-lg mt-4"
                   href="./training/calculator/calculator.html"
                   >이동!</a
                 >
