[Feat] NotePad Page Init, Calculator css fix. NotePad 기본 레이아웃, 로컬 연동 테스트 완료.

--- a/training/calculator/calculator.html
+++ b/training/calculator/calculator.html
@@ -25,13 +25,13 @@
           <button class="num">7</button>
           <button class="num">8</button>
           <button class="num">9</button>
-          <button class="operator">x</button>
+          <button class="operator operator-align">x</button>
         </div>
         <div class="button-area">
           <button class="num">4</button>
           <button class="num">5</button>
           <button class="num">6</button>
-          <button class="operator">-</button>
+          <button class="operator operator-align">-</button>
         </div>
         <div class="button-area">
           <button class="num">1</button>
