--- a/training/notepad/notepad.html
+++ b/training/notepad/notepad.html
@@ -28,7 +28,7 @@
           <button class="black-btn" type="button">작성하기</button>
         </form>
       </main>
-      <section>
+      <section class="diary-list">
         <h2 class="a11y-hidden">일기 목록</h2>
         <ul>
           <li>
@@ -44,7 +44,7 @@
                   <img src="./image/icon-edit.svg" alt="수정" />
                 </button>
                 <span></span>
-                <button type="button">
+                <button type="button" class="delete-btn">
                   <img src="./image/icon-delete.svg" alt="삭제" />
                 </button>
               </div>
