--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 <h2 class="fs-4 fw-bold">계산기</h2>
                 <p class="mb-0">
                   계산기 페이지입니다. <br />
-                  너무 잘 만들었네요.
+                  잘 만들었네요.
                 </p>
                 <a
                   class="btn btn-dark btn-lg mt-4"
@@ -135,7 +135,7 @@
                   <i class="bi bi-book"></i>
                 </div>
                 <h2 class="fs-4 fw-bold">메모장</h2>
-                <p class="mb-0">메모장 페이지입니다. <br /></p>
+                <p class="mb-0">메모장 페이지입니다. <br />잘 만들었네요</p>
                 <a
                   class="btn btn-dark btn-lg mt-4"
                   href="./training/notepad/notepad.html"
