[Fix] 메모장 이미지 로드 수정

--- a/training/notepad/notepad.html
+++ b/training/notepad/notepad.html
@@ -100,7 +100,8 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@9"></script>
+
     <script src="../../js/notepad/notepad.js"></script>
-    <!-- <script src="../../js/notepad/canvas.js"></script> -->
+    <script src="../../js/notepad/canvas.js"></script>
   </body>
 </html>
