--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <div
                   class="feature bg-secondary bg-gradient text-white rounded-3 mb-4 mt-n4"
                 >
-                  <i class="bi bi-1-circle-fill"></i>
+                  <i class="bi bi-clock"></i>
                 </div>
                 <h2 class="fs-4 fw-bold">타이머</h2>
                 <p class="mb-0">타이머 페이지입니다.</p>
