--- a/training/racing-car/index.html
+++ b/training/racing-car/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>자동차 경주 게임</title>
     <script src="https://cdn.jsdelivr.net/npm/@woowacourse/mission-utils@1.0.1/dist/mission-utils.min.js"></script>
+    <link rel="stylesheet" href="../../css/car-racing/script.css" />
   </head>
 
   <body>
