[Feat] racing-car 페이지 구현완료

--- a/training/racing-car/index.html
+++ b/training/racing-car/index.html
@@ -25,7 +25,9 @@
         <button type="button" id="racing-count-submit">확인</button>
       </form>
       <h4 class="result">📄 실행 결과</h4>
-      <h4>최종 우승자: <span id="racing-winners">(우승자)</span></h4>
+      <h4 class="winner-container">
+        최종 우승자: <span id="racing-winners"></span>
+      </h4>
     </div>
     <script type="module" src="../../js/racing-car/script.js"></script>
   </body>
